<resources>
    <string name="app_name">Gmail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Azad Singh</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mail">azadsingh80a190@gmail.com</string>
    <string name="menu_Mail">Mail\n</string>
    <string name="menu_Sent">Sent</string>
    <string name="menu_OutBox">OutBox</string>
    <string name="menu_Bin">Bin</string>
    <string name="menu_Notification">Notification</string>
    <string name="menu_Share">Share</string>
    <string name="menu_Contacts">Contacts</string>
    <string name="action_Archive">Archive</string>
    <string name="action_Exit">Exit\n</string>
</resources>